[package]
name = "parkright"
version = "1.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/parkright"
repository = "https://github.com/Parkando/parkright"
description = """
Wrapper around Parkright Settlement API
"""

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
thiserror = "2.0.11"


[dev-dependencies]
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
